--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 body {
   font-family: 'Orbitron', sans-serif;
-  background: url("/pics/Bc.png") no-repeat center center fixed;
+  background: url("./pics/Bc.png") no-repeat center center fixed;
   background-size: cover;
   color: #fff;
 }
